// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatorToolbox - creator not initilized yet if reator is not initialized, it should not render toolbox content 1`] = `
<div>
  <nav
    class="navigation-bar"
  >
    Loading
  </nav>
</div>
`;

exports[`CreatorToolbox by default displays general toolbox items 1`] = `
<div>
  <nav
    class="navigation-bar"
  >
    <button
      class="navItem"
    >
      <svg />
      Image
    </button>
    <button
      class="navItem"
    >
      <svg />
      Shape
    </button>
    <button
      class="navItem"
    >
      <svg />
      Text
    </button>
  </nav>
</div>
`;

exports[`CreatorToolbox by default displays general toolbox items 2`] = `
<div>
  <nav
    class="navigation-bar"
  >
    <button
      class="navItem"
    >
      <svg />
      Remove
    </button>
  </nav>
</div>
`;
